[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scenes/menus/scripts/Main.gd" type="Script" id=1]
[ext_resource path="res://Scenes/menus/scenes/start.png" type="Texture" id=2]
[ext_resource path="res://Scenes/menus/scenes/quit.png" type="Texture" id=3]
[ext_resource path="res://Scenes/menus/scenes/options.png" type="Texture" id=4]
[ext_resource path="res://Scenes/menus/scenes/menu_background.png" type="Texture" id=5]

[sub_resource type="Theme" id=1]

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Background2" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -5.0
margin_top = 95.0
margin_right = -5.0
margin_bottom = 95.0
color = Color( 0.109804, 0.0862745, 0.0862745, 1 )

[node name="Sprite" type="Sprite" parent="Background2"]
position = Vector2( 958, 529 )
scale = Vector2( 0.389638, 0.389638 )
texture = ExtResource( 5 )

[node name="Button_Container" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -430.0
margin_top = -269.0
margin_right = 575.0
margin_bottom = 336.0
rect_scale = Vector2( 0.777442, 0.777442 )
theme = SubResource( 1 )

[node name="StartButton" type="Button" parent="Button_Container"]
margin_right = 1005.0
margin_bottom = 199.0
focus_neighbour_top = NodePath("../QuitButton")
icon = ExtResource( 2 )
flat = true

[node name="OptionsButton" type="Button" parent="Button_Container"]
margin_top = 203.0
margin_right = 1005.0
margin_bottom = 402.0
icon = ExtResource( 4 )
flat = true

[node name="QuitButton" type="Button" parent="Button_Container"]
margin_top = 406.0
margin_right = 1005.0
margin_bottom = 605.0
focus_neighbour_bottom = NodePath("../StartButton")
icon = ExtResource( 3 )
flat = true

[connection signal="pressed" from="Button_Container/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="Button_Container/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="Button_Container/QuitButton" to="." method="_on_QuitButton_pressed"]
